--- a/src/members/members.html
+++ b/src/members/members.html
@@ -2,11 +2,13 @@
     <require from="./members.css"></require>
 
     <section class="container content-area">
-        <div class="row top-head" css="margin-top:30px;background-image:url('${theme.files.top_background}');">
-            <div  style="background-color:rgba(120, 120, 120, 0.3);height:95px;padding-top:20px;padding-right:15px;">
+        <div class="row top-head" css="margin-top:60px;background-image:url('${theme.files.top_background}');height:96px;">
+            <div style="padding-top:0px;padding-right:15px;">
                 <h1 dir="rtl">${"members.members" | t}</h1>
             </div>
-            <div class="row" style="margin-bottom:20px">
+        </div>
+        <div>
+            <div class="row">
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-1" if.bind="! user.editing"></div>
@@ -20,7 +22,7 @@
                 <div class="col-md-5">
                     <form class="form-inline">
                         <div class="input-group" style="padding-top:16px;">
-                            <help topic="members" position="bottom" ></help> 
+                            <help topic="members" position="bottom"></help>
                         </div>
                         <div class="input-group" style="margin-top:15px;width:80%;">
                             <input dir="rtl" type="search" class="form-control" t="[placeholder]members.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce">
@@ -32,7 +34,8 @@
             <div id="member-list" class="member-list content-area" css="height:${win_height-420}px;">
                 <ul class="list-group">
                     <li repeat.for="member of members | filter : filter : 'first_name' : 'last_name' : 'former_first_name' : 'former_last_name' : 'nick_name' | take : 3200 | filtervisibility : 0"
-                        class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} ${not_ready(member) ? 'not_ready' : ''}" dir="rtl" >
+                        class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} ${not_ready(member) ? 'not_ready' : ''}"
+                        dir="rtl">
                         <a route-href="route: member-details; params.bind: {id:member.id}" disabled.bind="not_ready(member)">
                             <img src.bind="member.facePhotoURL" aubs-tooltip="text.bind:member.title" />
                             <h6 dir="rtl" class="list-group-item-heading" >${member.name}</h6>
