--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -1,11 +1,10 @@
 <template>
     <section class="container content-area">
-        <div class="row top-head" style="margin-top:30px;background-image:url('${theme.files.top_background}');">
-            <div style="background-color:rgba(120, 120, 120, 0.3);height:95px;padding-top:20px;padding-right:15px;">
+        <div class="row top-head" css="height:96px;margin-top:60px;background-image:url('${theme.files.top_background}');">
+            <div style="padding-top:0px;padding-right:15px;">
                 <h1 dir="rtl"> ${"terms.terms-lexicon" | t}</h1>
             </div>
         </div>
-
         <div class="row content-area" style="height:300px;width:100%;margin-top:20px;" dir="rtl">
             <div class="row">
                 <div class="col-md-1">
