--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
   <require from="app.css"></require>
   <require from="scrollbox.css"></require>
   <div class="container">
-    <div class="full-width-div" style="background-color:rgba(80, 80, 80, 0.3);height:80px;top:59px;">
+    <div class="full-width-div" style="background-color:rgba(80, 80, 80, 0.3);height:80px;top:59px;" if.bind="theme.display_header_background">
     </div>
     <div class="row">
       <div class="center-block">
