--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,9 +1,9 @@
 <template>
     <require from='./home.css'></require>
-    <div style="margin-bottom:360px">
+    <div style="margin-bottom:${photo_strip_height}px">
         <div style="margin-top:60px;top: 0px;" class="full-width-div">
             <div id="photo-strip">
-                <photo-strip source.bind="photo_list" slides.bind="slides" id="1" action.bind="action" 
+                <photo-strip source.bind="photo_list" slides.bind="slides" id="1" action.bind="action" fullscreen.bind="true" height_change.trigger="on_height_change($event)"
                     action_key="Zoom1" settings.bind="{arrows:true, slide_show: 5}"></photo-strip>
             </div>
         </div>
