--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -11,7 +11,7 @@
         <photo-strip source.bind="source" height.bind="220" id.bind="member.member_info.id" action_key="Zoom"
             settings.bind="{arrows:true, height:220}"></photo-strip>
         <div>
-            <div class="row content-area" style="min-height:280px;width:1170px;border-bottom: solid 6px white;margin: 0;" dir="rtl">
+            <div class="row content-area" style="min-height:280px;width:1170px;margin: 0;" dir="rtl">
                 <div class="col-md-6">
                     <div class="row" if.bind="member.family_connections.hasFamilyConnections">
                         <h3>${'members.family-connections' & t}</h3>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="row fr-view slide-list" if.bind="! user.editing" interact-draggable interact-dragend.delegate="shift_stories($event)"
-                dir="rtl" style="padding-right:15px;border-bottom: solid 6px white;">
+                dir="rtl" style="padding-right:15px;border: solid 6px white;">
                 <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, -1)"><i class="fa fa-chevron-right fa-3x"></i></div>
                 <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
