--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -1,28 +1,29 @@
 <template id="bla">
     <require from="./stories.css"></require>
     <ux-dialog style="direction:rtl">
-        <ux-dialog-header if.bind="show">
-            <div dir="rtl">
+        <ux-dialog-header>
+            <div dir="rtl" if.bind="show">
                 <h2 dir="rtl" class="story-title" style="margin:0;">${story.name}</h2>
+            </div>
+            <div class="story-title" if.bind="edit" dir="rtl">
+                <form class="form-horizontal" role="form">
+                    <div class="form-group" style="margin:0;">
+                        <input type="text" class="form-control" t="[placeholder]stories.enter-story-name" value.bind="story.name" dir="rtl">
+                    </div>
+                </form>
             </div>
         </ux-dialog-header>
         <ux-dialog-body>
             <div class="fr-view" dir="rtl" if.bind="show">
-                <div class="bigxxx-story-panel">
+                <div>
                     <p dir="rtl" innerhtml.bind="story.story_text ">
                     </p>
                 </div>
             </div>
 
-            <div class="row story-title" if.bind="edit" dir="rtl">
-                <form class="form-horizontal" role="form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" t="[placeholder]stories.enter-story-name" value.bind="story.name" dir="rtl">
-                    </div>
-                </form>
 
-                <div class="big-story-panel fr-view" if.bind="edit">
-                    <froala-editor value.two-way="story.story_text" config.bind="{
+            <div class="big-story-panel fr-view" if.bind="edit">
+                <froala-editor value.two-way="story.story_text" config.bind="{
                             toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
                                  'color', 'fontSize', 'align', 'html'],
                                  fontSize: ['8', '10', '12', '13', '14', '15', '16', '18', '36', '48', '60', '72', '96'],
@@ -34,13 +35,13 @@
                                  VideoDefaultWidth: 160,
                                  charCounterCount: false,
                                  language: 'he', heightMin: 400, heightMax: 400}">
-                    </froala-editor>
-                </div>
+                </froala-editor>
+            </div>
             </div>
         </ux-dialog-body>
-        <ux-dialog-footer if.bind="edit">
+        <ux-dialog-footer if.bind="edit" style="padding-right:16px;">
             <button class="btn btn-danger btn-warning" click.trigger="cancel()">${'stories.cancel' | t}</button>
-            <button class="btn btn-success btn-primary ${dirty_story ? 'btn-warning' : 'disabled'}" click.trigger="save()" >${'stories.save' | t}</button>
+            <button class="btn btn-success btn-primary ${dirty_story ? 'btn-warning' : 'disabled'}" click.trigger="save()">${'stories.save' | t}</button>
         </ux-dialog-footer>
     </ux-dialog>
 
