--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -8,7 +8,7 @@
                 <i if.bind="user.privileges.EDITOR" class="fa fa-sm fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
                 <i if.bind="settings.checkable && user.editing" class="fa fa-sm fa-circle${story.checked ? '' : '-o'} is-link" t="[title]stories.checking" click.trigger="toggle_checked()">&nbsp;</i>
             <span if.bind="settings.show_date &&story.timestamp">${story.timestamp} | </span>
-            <span if.bind="story.author">${story.author}: </span>
+            <span if.bind="story.author">${story.author}:&nbsp;</span>
         </div>
         <div class="row checkable ${story.checked ? 'selected' : ''}"><strong style="float:right" innerhtml.bind="story.name" ></strong></div>
 
